tests/error/openstring.py
print "THIS IS NOT A CLOSED STRING OMGOMG NOOOOOOO

# Hmmm....
x = 10 + 25
y = [1,3,3,7]
nope = 0

print """this is another string with no end..."
print 50
print nope
